--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,8 @@
     <color name="blueviolet">#3B21CC</color>
     <color name="burnishedbrown">#A17A74</color>
     <color name="burlywood">#DEB887</color>
+    <color name="ship_gray">#3F3F41</color>
+    <color name="sky">#15CAF7</color>
 
 
 
